fix search field on iOS

--- a/webui/src/styles/channelnav.scss
+++ b/webui/src/styles/channelnav.scss
@@ -31,6 +31,7 @@
       padding: 0 29px 0 7px;
       background: rgba(255,255,255,0.2);
       border: none;
+      border-radius: 0;
       height: 36px;
       color: $text-color;
       width: 36px;
@@ -45,7 +46,7 @@
     &Icon {
       position: absolute;
       right: 8px;
-      top: 10px;
+      top: 12px;
       pointer-events: none;
     }
   }
